--- a/.github/workflows/lesson-5-frontend.yaml
+++ b/.github/workflows/lesson-5-frontend.yaml
@@ -34,9 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: ZAP Baseline Scan
-      - uses: zaproxy/action-baseline@v0.14.0
+        uses: zaproxy/action-baseline@v0.14.0
         with:
           target: 'https://hangryhippo.quantic.host'  # Replace with your actual deployed app URL
-          rules_file_name: 'baseline_rules.txt'
-          fail_on_error: 'true'
-          cmd_options: '-config api.disablekey=true'
+          
